--- a/Activity1.7.ipynb
+++ b/Activity1.7.ipynb
@@ -9,7 +9,7 @@
     "\n",
     " \n",
     "Consider a 10-year equity-linked contract issued to a life aged 60, with a single premium of \n",
-    "$P = \\text{MK } 10000. After a deduction of 3\\% for initial expenses, the premium is invested in an equity fund. \n",
+    "$P = \\text{MK } 10000$. After a deduction of 3\\% for initial expenses, the premium is invested in an equity fund. \n",
     "An annual management charge of 0.5\\% is deducted from the fund at the start of every year except the first.\n",
     "\n",
     "1) The contract carries a guarantee that the maturity benefit will not be less than the single premium, \\(P\\).\n",
